src/article/index.scss
@use '../sass/settings';
@use '../sass/typography';

img {
   max-width: 100%;
}

.content-header {
  margin: 0;
  text-align: left;
}


@media only all and (min-width: 730px) {
  .content-header {
    grid-column: 1/10;
    grid-row: 1;
  }

  .secondary-column {
    grid-column: 10 / 13;
    grid-row: 1/3;
  }

  .primary-column {
    grid-column: 1/10;
    grid-row: 2;
  }
}

@media only all and (min-width: 1000px) {

  .primary-column {
    display: grid;
  }

  .table-contents {
    grid-column: 1/3;
  }

  .main-content-area {
    grid-column: 3/10;
  }

  main {
    border-top: 0;
    margin-top: 2rem;
  }
}

.toc-container {
  max-width: 69.625rem;
  margin: auto;
  border-left: 2px solid settings.$color-less-light-grey;
}

.toc-list {
  list-style: none;
  padding-left: 0px;
  margin-left: -2px;
}

.toc-list__item {
  min-width: 150px;
  margin-bottom: 24px;
  padding-left: 20px;
}
.toc-list__item:last-child {
  margin-bottom: 0px;
}

.toc-list__item--selected {
  min-width: 150px;
  margin-bottom: 24px;
  padding-left: 20px;
  border-left: 2px solid settings.$color-emphasis;
}

.toc-list__link {
  @include typography.navigation-heading();
}

.toc-list__item--selected .toc-list__link {
  @include typography.navigation-heading-selected();
}

.review-link__container {
  max-width: 69.625rem;
  margin: auto;
  padding-left: 48px;
  text-align: right;
}

.review-link__anchor {
  @include typography.link-text();
}

